--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,162 @@
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.button {
-  color: #fff;
-  background: rgb(212,75,56);
-  padding: 12px 25px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-
-  margin: 30px 0 0 30px;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-.button:hover { background: rgb(232,95,76); }
-.button:active { background: rgb(152,15,0); } 
+ul {
+  list-style-position: inside
+}
 
-.newsItem {
-  background-color: #cccc;
-  color: green;
-  margin: 10px auto;
-  max-width: 60%;
-  padding: 10px;
-  border-radius: 5px;
-  text-decoration: none;
+li {
+  margin: 0 10px 0 40px;
 }
 
 .drop-container {
   position: relative;
-  border: 2px solid green;
-
   padding: 20px;
 }
 
 .drop {
-  position: absolute; 
+  position: absolute;
   z-index: 10;
-  left: -27px; 
+  left: -27px;
   top: 15px;
   width: 20px;
-  height: 20px; 
-  background: darkgray;
+  height: 20px;
+  /* background: darkgray; */
+  background: black;;
   text-align: center;
   font-weight: bold;
-  font-size: 100%; 
+  font-size: 100%;
   cursor: pointer;
   border-radius: 50%;
-  color: black;
+  color: white;
 }
 
 .non-display {
   display: none;
+}
+
+.toleft {
+  transform: translateX(-250px);
+  transition: all 0.5s ease-in-out;
+}
+
+.toright {
+  transform: translateX(250px);
+  transition: all 0.5s ease-in-out;
+}
+
+.tocenter {
+  transition: all 0.5s ease-in-out;
+  transform: translateX(0px);
+}
+
+.orange-text {
+  color: #fc6600;
+}
+
+.button {
+  font-size: 20px;
+  margin: 0;
+  color: #fff;
+  background: rgb(212, 75, 56);
+  padding: 12px 25px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background: rgb(232, 95, 76);
+}
+
+.button:active {
+  background: rgb(152, 15, 0);
+}
+
+.main-title {
+  font-family: sans-serif;
+  color: #fff;
+}
+
+.header-container {
+  position: fixed;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  background-color: #fc6600;
+  top: 0;
+  padding: 35px;
+  font-size: 25px;
+  z-index: -100;
+  /* margin-bottom: 170px; */
+}
+
+.news-container {
+  margin: auto;
+  margin-top: 170px;
+  max-width: 50%;
+}
+
+.news-item-post-container {
+  margin: 0 auto;
+  margin-top: 150px;
+  padding: 10px;
+  text-align: justify;
+
+  max-width: 60%;
+  border-radius: 20px;
+
+  background-color: #cccc;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  padding: 60px;
+  background-color: #cccc;  
+  color: black;
+  font-family: sans-serif;
+  margin: 10px auto;  
+  padding: 10px;
+  border-radius: 20px;
+  text-decoration: none;
+  padding: 10px 20px;
+}
+
+.item p {
+  margin-bottom: 10px;
+}
+
+.index {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: black;
+  color: white;
+  font-size: 20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 30px;
+  padding: 20px;
+}
+
+.item-title {
+  margin: 10px 0;
+}
+
+.to-up-button {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
 }
